# HW10_django

HW10/: README.md  pyproject.toml
HW10/hw_project/hw_project/: settings.py  urls.py
HW10/hw_project/quotes/: forms.py  models.py  urls.py  views.py
HW10/hw_project/quotes/migrations/: 0001_initial.py
HW10/hw_project/quotes/templates/quotes/: author.html  author_info.html  base.html  index.html  quote.html
HW10/hw_project/users/: forms.py  models.py  urls.py  views.py
HW10/hw_project/users/templates/users/: login.html  logout.html  password_reset.html  register.html
HW10/hw_project/utils/: config.ini  migration.py
